# src/models/bean.go
@@ -9,7 +9,7 @@ import (
 type Bean struct {
 	ID             int            `json:"id" gorm:"AUTO_INCREMENT"`
 	UserId         string         `json:"userId"`
-	ProductionArea string         `json:"productionArea"`
+	ProductionRegion string         `json:"ProductionRegion"`
 	Kind           string         `json:"kind"`
 	RoastLevelId   int32          `json:"roastLevelId"`
 	Price          int            `json:"price"`
